修改工具类技术债